[project]
name = "pyccd"
version = "0.1.0"
authors = [
  { name="Lars Berling", email="berlinglars96@gmail.com" },
]
description = "A python package for conditional clade distributions (CCD)"
readme = "README.md"
license = "LGPL-3.0-or-later"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Lars-B/pyccd"
Issues = "https://github.com/Lars-B/pyccd/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyccd"]

[project.scripts]
transcope = "pyccd.transcope:main"
